Updated formatting and style.

--- a/main.tex
+++ b/main.tex
@@ -1,44 +1,58 @@
-\documentclass[11pt, a4paper,]{scrartcl}
-%\setkomavar{subject}{Title of essay?} % Comment out if you don't need a subject line
+\documentclass[12pt, a4paper,]{scrartcl}
 \usepackage[utf8]{inputenc}
 \usepackage{charter}
 \usepackage{ragged2e}
-\usepackage[margin=2cm]{geometry}
-%Citation---------------------------------------------------------
-\usepackage{apacite}
+\usepackage[margin=3cm]{geometry}
+\usepackage{fancyhdr}
 
+\fancyhead[R]{\color{structurecolor}\thepage}
+\usepackage{xcolor}
+\usepackage{fourier-orns}
+%Citation---------------------------------------------------------
+\usepackage{hyperref}
+\usepackage[]{apacite}
 %-----------------------------------------------------------------
 \setlength{\parindent}{0em}
 \setlength{\parskip}{1em}
-%\linespread{1.5}
-
+\linespread{1.5}
+ 	%\definecolor{bdazzledblue}{rgb}{0.18,0.35,0.58}
+ 	 	\definecolor{antiqueruby}{rgb}{0.52,0.11,0.18}
+\hypersetup{
+ colorlinks = true,
+ allcolors = {antiqueruby}
+}
 %-----------------------------------------------------------------
 \begin{document}
 \vspace{-2em}
 \begin{flushleft}{\footnotesize{}
-PICT711 - Research Essay\\
-Aaron Hammond - 43691455\\
-Word Count:
+Essay by Aaron Hammond
 }
 \end{flushleft}
 %------------------------------------------------------------------
 
-\hrule
+%\hrule
 %-------------------------------------------------------------------
 \begin{center}
-\huge Collectivizing Harm\\[.2cm]
+\vspace{1cm}
+\huge Collectivizing Harm:\\[.2cm]
 \large A criminological analysis of the Soviet Union's collectivization policy. 
 \end{center}
 %-------------------------------------------------------------------
-The Soviet collective farms policy was an initiative envisioned to stimulate the declining productivity of the agriculture sector of the Soviet Union. Utilising the power of socialism and promises of modernity and industrialization, Joseph Stalin looked to propel the Union of Soviet Socialist Republics (USSR) into a new age of prosperity known as \textit{The Great Breakthrough} \cite{Hughes1991}. The process he undertook to introduce this policy is one wrought with violence, social coercion and abuse of state powers. This paper will analyse the process and repercussions of the collectivization process as a form of state crime. This analysis will utilise the harm-based definition outlined presented by \cite{STEVETOMBSandDAVEWHYTE2002} and how this policy resulted in the targetted genocide of the Kulak class \cite{Meierhenrich}. The Kulaks were a class of prosperous peasants that owned and controlled the agricultural sector prior to collectivization. The use of a harm-based definition of crime is applied here due to the state's actions in criminalizing any form of protest to the collectivization policy. This provided the structural support for the state to demonise the Kulaks whilst rendering their unjust treatment as lawful under Stalin's \textit{Ural-Siberian Method} \cite{ViolaTheCountryside}. This 'method' enhanced the state's power to dispossess and displace individuals within the agricultural sector. These structural platforms presented opportunities for Stalin to stigmatize the Kulaks in public statements. The language in these statements was used to segregate the Kulak class, rally public support and establish a narrative of 'us verse them'. By removing any form of political or social support from the Kulak class, the state was able to operate with minimal resistance. The effects of collectivization resulted in widespread famine throughout the USSR, causing mass famine and death to millions of its citizens.\par
 
-The collectivization of farms in the Soviet Union was a policy spearheaded by the General Secretary of the Communist Party of the Soviet Union, Joseph Stalin. During the years from 1928 to 1940. Stalin's motivation for the collectivization policy was to dismantle the capitalist model of private farming purported by the Kulak class. In doing so, the state would gain control of the farming sector as a means for economic gain \cite{Hughes1994}. The collective-farm policy was also anticipated as a means of combat the deteriorating crop yields from the Kulaks' private market. The initial years were met with fierce resistance, facing various forms of rural resistance including protests, terrorism and sabotaging their own crop \cite{Marker1998}. These protests severely limited the state's grain production and hindered the collectivization process. Not to be deterred, Stalin enacted the \textit{Ural-Siberian method} to rectify the poor results. It provided the state with the power to punish those resisting with heavy fines, dispossession and forced relocation \cite{Hughes1994}. Farmers were given quotas of grain to provide the state, failure to meet this quota was enough to be perceived as resisting. Subsequently they were dispossessed of their land and grain reserves, then sent to forced labour camps in Siberia \cite{Kalashnikov2018}. It is estimated that up to 10 million households were displaced, with an estimated mortality rate of 30 percent \cite{Khlevniuk2004TheTerror}. In the following 12 months the state's control of farms had increased from 7.4 to 60 percent \cite{Khlevniuk2004TheTerror}. The subsequent years saw the state sell its grain to the European markets in order to purchase goods for the industrialisation and mechanisation of the farming sector, a decision that was made knowing that the remaining grain would not be sufficient to feed the populace \cite{Hughes1991}. This resulted in famine in many rural areas throughout the USSR. The state refused to provide relief to areas struck by the famine and citizens were denied mobility to prevent them from entering other parts of the state \cite{Livi-Bacci1993OnUnion}, resulting in the estimated deaths of over 9 million soviet citizens. These events showcase that the collectivization policy was a strategy to disenfranchise the peasantry for the economic gain of the state. It was a form of state crime fulfilled with deliberation and malice.
+\hrulefill\hspace{0.2cm}\color{antiqueruby} \floweroneleft\floweroneright \color{black}\hspace{0.2cm} \hrulefill\\
+\vspace{0.2cm}
+
+
+%-------------------------------------------------------------------
+The Soviet collective farms policy was an initiative envisioned to stimulate the declining productivity of the agriculture sector of the Soviet Union. By utilising the power of socialism and promises of modernity and industrialization, Joseph Stalin looked to propel the Union of Soviet Socialist Republics (USSR) into a new age of prosperity known as \textit{The Great Breakthrough} \cite{Hughes1991}. The process he undertook to introduce this policy is one wrought with violence, social coercion and abuse of state powers. This paper will analyse the process and repercussions of the collectivization process as a form of state crime. This analysis will utilise the harm-based definition outlined presented by \cite{STEVETOMBSandDAVEWHYTE2002} and how this policy resulted in the targeted genocide of the Kulak class \cite{Meierhenrich}. The Kulaks were a class of prosperous peasants that owned and controlled the agricultural sector prior to collectivization. The use of a harm-based definition of crime is applied here due to the state's actions in criminalizing any form of protest to the collectivization policy. This provided the structural support for the state to demonise the Kulaks whilst rendering their unjust treatment as lawful under Stalin's newly introduced, \textit{Ural-Siberian Method} \cite{Viola2005}. This 'method' enhanced the state's power to dispossess and displace individuals within the agricultural sector. The state's control of media presented opportunities for Stalin to stigmatize the Kulaks in public statements. The language in these statements was used to segregate the Kulak class and rally public support to establish a narrative of 'us verse them'. By removing any form of political or social support from the Kulak class, the state was able to operate with minimal resistance. The effects of collectivization resulted in widespread famine throughout the USSR, causing mass famine and death to millions of its citizens.\par
+
+The collectivization of farms in the Soviet Union was a policy spearheaded by the General Secretary of the Communist Party of the Soviet Union, Joseph Stalin \cite{Hughes1994}. During the years from 1928 to 1940. Stalin's motivation for the collectivization policy was to dismantle the capitalist model of private farming purported by the Kulak class. In doing so, the state would gain control of the farming sector as a means for economic gain \cite{Hughes1994}. The collective-farm policy was also anticipated to combat the deteriorating crop yields. The initial years were met with rural resistance, including protests, terrorism and farmers sabotaging their own crop \cite{Marker1998}. These protests severely limited the state's grain production and slowed the collectivization process. Not to be deterred, Stalin enacted the \textit{Ural-Siberian method} to rectify the poor results. It provided the state with the power to punish those resisting with heavy fines, dispossession and forced relocation \cite{Hughes1994}. Farmers were given quotas of grain to provide the state, failure to meet this quota was enough to be perceived as resisting. Subsequently, they were dispossessed of their land and grain reserves, then sent to forced labour camps in Siberia \cite{Kalashnikov2018}. It is estimated that up to 10 million households were displaced, with an estimated mortality rate of 30 percent \cite{Khlevniuk2004}. In the following 12 months the state's control of farms had increased from 7.4 to 60 percent \cite{Khlevniuk2004}. The subsequent years saw the state sell its grain to the European markets to purchase goods for the industrialisation and mechanisation of the state, a decision that was made knowing that the remaining grain would not be sufficient to feed the populace \cite{Hughes1991}. This resulted in famine in many rural areas throughout the USSR. The state refused to provide relief to areas struck by the famine and citizens were denied the ability to travel to other parts of the state \cite{Livi-Bacci1993OnUnion}, resulting in the estimated deaths of over 9 million soviet citizens. These events showcase that the collectivization policy was a strategy to disenfranchise the peasantry for the economic gain of the state. It was a form of state crime fulfilled with deliberation and malice.
 \par
-Stalin's introduction of the Ural-Siberian method through state apparatus ensured that the state's actions were not illegal, however by utilising a harm-based definition, it is clear that the policy was a form of state crime and genocide. Crime is generally measured according to the confines of the law, however, as the state is inherently responsible for the rule-of-law, this approach can be problematic. A harm-based definition attempts to define crime according to broader set of violations. Green \& Ward \citeyear{Green2000} define state crime as the violation of human rights; a definition that is divided into two paradigms, the health paradigm and the torture paradigm. This analysis will be utilising the health paradigm, which states that all individuals are entitled to the materialistic necessities for well-being such as shelter, food, water, medicine, recreational experiences and, security from repressive or imperialistic elites. The harm that the collectivisation policy inflicted was two-fold, the first is the unjust treatment and punishment of the Kulaks. This process is referred to as 'dekulakization' \cite{Meierhenrich}. The second is the resulting famine that occurred throughout its inception. The process of criminalizing and punishing the Kulaks became punishments were a form of social coercion \cite{Viola2005}. While imprisoned, prisoners were subjected to harsh physical labour, meager food rations, inadequate clothing, overcrowding and deprived of any real form of hygiene or healthcare \cite{khlevniuk2004}.The second form of harm was the famine that was incurred through collectivization. The state's focus on bolstering economic growth occurred at the cost of citizen exploitation and death. The high death toll as a direct result of the state's actions renders these acts as systematic genocide \cite{Meierhenrich}. \par
+Stalin's introduction of the Ural-Siberian method through state apparatus ensured that the state's actions were not illegal, however by utilising a harm-based definition, it is clear that the policy was a form of state crime and genocide. A harm-based definition attempts to define crime according to broader set of violations. This analysis will define state crime according to Green \& Ward's \citeyear{Green2000} health paradigm, which states that all individuals are entitled to the materialistic necessities for well-being such as shelter, food, water, medicine, recreational experiences and, security from repressive or imperialistic elites. If a state denies an individual these rights, that act is a state crime. The harm that the collectivisation policy inflicted was two-fold, the first is the unjust treatment and punishment of the Kulaks, a processes now referred to as 'dekulakization' \cite{Meierhenrich}. The second is the resulting famine that occurred throughout collectivization's implementation. The process of criminalizing and punishing the Kulaks became punishments were discussed by the government as form of social coercion \cite{Viola2005}. However, the process and conditions they were subjected to suggests it was more sinister. While imprisoned, prisoners were subjected to harsh physical labour, meagre food rations, inadequate clothing, overcrowding and deprived of any real form of hygiene or healthcare \cite{Khlevniuk2004}. This sentiment is further reflected in Stalin's announcement of the "liquidation of the Kulaks as a class". A quote that reflects his calculated plans for genocide. The second form of harm was the famine that was incurred through collectivization. The state's focus on bolstering economic growth occurred at the cost of citizen exploitation and death. The high death toll as a direct result of the state's actions renders these acts as systematic genocide \cite{Meierhenrich}. From a critical criminological perspective, this amounts to the state's abuse of its own power over its citizens \cite{Pontell2005UnmaskingCorporations}. The state willingly orchestrated a set of circumstances that would allow them to profit whilst inflicting death and harm on the peasantry. To assist in this process, the state used the media as modes of social influence to dismantle any further form of social resistance.\par
 
-The state utilised the media to control shape the narrative of the collectivization policy and control public opinion, and perception. The example that this paper wants to focus on is a public statement made by Stalin. During the initial stages of collectivization, he famously announced "Now we have the opportunity to carry out a resolute offensive against the Kulaks, break their resistance, eliminate them as a class and replace their production with the production of kolkhozes and sovkhozes" (Conquest, 1986). The kolkhozes and sovkhozes refer to forms of collective farms. The use of military-styled language in his address invites the sentiments of warfare into the narrative. In the words of Matzaa and Sykes \citeyear{Matza1964}, this is a technique of neutralisation referred to as \textit{denial of the victim}. Typically, war is not perceived as a victim and offender relationship, but a contest of winners and losers. Words such as offensive and resistance suggest that there is a contest between two factions, instead of a government instigating class warfare on a targeted demographic. The re-occuring use of 'their' fundamentally places the reader in alliance with Stalin, and labels the Kulak class as a political enemy \cite{Neubacher2006}. This technique is useful in creating a binary mode of thought to further divide the two sides. Tombs \& Whyte \citeyear{STEVETOMBSandDAVEWHYTE2002} briefly discuss this technique in the American context. After September 11 2001, the "you are either with us or against us" rhetoric was in full swing and removed any critique or discussion of the state's actions. Those who spoke out risked being silenced or labelled a "terrorist sympathiser". Stalin's address achieved the same outcome, labelling the enemy as a means of establishing that 'us verse them' mentality in Soviet citizens.\par
+The state utilised the media to shape the narrative of the collectivization policy and control public perception. The example that this paper will focus on is a public statement made by Stalin. During the initial stages of collectivization, he famously announced "Now we have the opportunity to carry out a resolute offensive against the Kulaks, break their resistance, eliminate them as a class and replace their production with the production of kolkhozes and sovkhozes" (Conquest, 1986). The kolkhozes and sovkhozes refer to forms of collective farms. The use of military-styled language in his address invites the sentiments of warfare into the narrative. In the words of Matza and Sykes \citeyear{Matza1964}, this is a technique of neutralisation referred to as, \textit{denial of the victim}. This technique removes accountability from the perpetrator because they deserve their treatment. Typically, war is not perceived as a victim and offender relationship, but a contest of winners and losers. Words such as offensive and resistance suggest that there is a contest between two equipped factions, instead of a government instigating class warfare and demonizing a demographic. The re-occurring use of 'their' fundamentally places the reader in accordance with Stalin, and labels the Kulak class as a common enemy \cite{Neubacher2006}. This technique is useful in creating a binary mode of thought to further divide the two sides. Tombs \& Whyte \citeyear{STEVETOMBSandDAVEWHYTE2002} briefly discuss this technique in the American context. After September 11 2001, the "you are either with us or against us" rhetoric was fully endorsed by the president and the state. It removed any critique or discussion of the state's actions with any meaningful engagement. Those who spoke out risked being silenced or labelled a "terrorist sympathiser". Stalin's address achieved the same outcome, labelling the enemy as a means of establishing that 'us verse them' mentality in Soviet citizens. This effectively dismantled any form of social resistance that was supported by the populace. Instead, it encouraged other classes to demonize them for opposing the state. With such control over of the narrative of collectivization, the state could undertake its mode of human rights abuse without repercussions or social upheaval. \par
 
-This paper discussed the events of the Soviet Collectivization policy as a form of genocide enacted by the state. The policy unfairly targeted and criminalised the Kulak class, allowing for their dispossession and exile within lawful terms.  This paper argued that these measures imposed by the state resulted in the deaths of over 9.5 million people and therefore qualify for genocide. A critical crimonoligcal theory suggests that the forced relocation of many of the Kulak class submitted them to inhumane treatment with deprivation of civil liberties, nutrition and freedom is a form of state crime. These policies and actions of the state were imposed with support of the people due to a vigorous public education of the state narrative. This was achieved by the public addresses of Stalin and his demonisation of the Kulak class. A linguistic analysis of his addresses relays a story of warfare between the state and the Kulak class, rallying the public to further demonize them. The use of linguistics in this way serves to remove any middle-ground from the two sides and allowed the state to criminalise and remove the class with minimal resistance from the public. In sum, the collectivisation policy was state crime committed on an enormous scale. Its consequences speak for themselves in regards to the unfair detention and deprivation of human rights and multi-million deaths as a result of the subsequent famine that the policy caused.
+This paper discussed the events of the Soviet Collectivization policy as a form of genocide enacted by the state for reasons of economic gain. Part of the policy's aim was to disenfranchise and criminalize the Kulak class. These measures allowed them to be dispossessed and exiled within the law's constraints. The sanctions imposed by the Ural-Siberian method imposed unethical sanctions on the class as a thin façade to acquire more power over the agricultural sector \cite{Marker1998}. These measures imposed by the state resulted in the human rights abuses of millions. This critical criminological analysis maintains that the submission of the Kulaks to inhumane treatment is a form of state crime as it deprived them of their human rights \cite{Khlevniuk2004,Green2000}. The collectivization policy acted as a catalyst for the resulting famine, costing the lives of over 9.5 million people \cite{Livi-Bacci1993OnUnion}. The state understood this was the cost of rapid economic gain gained by selling the crop yield to the European market. This analysis maintains that the policies and actions of the state were imposed with support of the people due to the state's vigorous control of the public narrative. This was achieved by public addresses made by Stalin. A linguistic analysis of his statement relays a story of warfare between the state and the Kulak class, serving to rally the public to the state's side of the conflict. The use of linguistics in this way serves to remove any middle-ground from the two sides and allowed the state to criminalise and remove the class with minimal resistance from the public. In sum, the collectivisation policy was state crime committed on an enormous scale. Its consequences speak for themselves in regards to the unfair detention and deprivation of human rights and multi-million deaths as a result of the subsequent famine that the policy caused.
 
 %--------------------------------------------------------------------
 
