--- a/ref.bib
+++ b/ref.bib
@@ -474,6 +474,10 @@
     pages = {117--148}
 }
 
+@misc{FOAR705+to+Cloudstor-duplicati-config,
+    title = {{FOAR705+to+Cloudstor-duplicati-config}}
+}
+
 @article{2014FollowingUnivers,
     title = {{Following Politics : Russian Youth Activism in Post-Socialist Latvia By Alexandre B Beliaev A dissertation submitted in partial satisfaction of the requirements for the degree of Doctor of Philosophy in Anthropology in the Graduate Division of the Univers}},
     year = {2014}
